updated with latest ui work

--- a/wave_android_uitest/wave_android_uitest.csproj
+++ b/wave_android_uitest/wave_android_uitest.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Activities\ChallengesActivity.cs" />
     <Compile Include="Activities\PeopleActivity.cs" />
     <Compile Include="ActivityListAdapter.cs" />
+    <Compile Include="MyLifeListAdapter.cs" />
+    <Compile Include="Activities\DayDetailActivity.cs" />
+    <Compile Include="CalendarPagerAdapter.cs" />
+    <Compile Include="CalendarPagerView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -110,14 +114,6 @@
     <AndroidResource Include="Resources\drawable\mylife_sel.png" />
     <AndroidResource Include="Resources\drawable\people_norm.png" />
     <AndroidResource Include="Resources\drawable\people_sel.png" />
-    <AndroidResource Include="Resources\drawable\ChallengesTab_Selected.png" />
-    <AndroidResource Include="Resources\drawable\ChallengesTab_Unselected.png" />
-    <AndroidResource Include="Resources\drawable\FriendsTab_Selected.png" />
-    <AndroidResource Include="Resources\drawable\FriendsTab_Unselected.png" />
-    <AndroidResource Include="Resources\drawable\ActivityTab_Selected.png" />
-    <AndroidResource Include="Resources\drawable\ActivityTab_Unselected.png" />
-    <AndroidResource Include="Resources\drawable\CalendarTab_Selected.png" />
-    <AndroidResource Include="Resources\drawable\CalendarTab_Unselected.png" />
     <AndroidResource Include="Resources\drawable\ActivityTab_Selected2.png" />
     <AndroidResource Include="Resources\drawable\ActivityTab_Unselected2.png" />
     <AndroidResource Include="Resources\drawable\CalendarTab_Selected2.png" />
@@ -129,6 +125,25 @@
     <AndroidResource Include="Resources\layout\tab_bar.xml" />
     <AndroidResource Include="Resources\layout\my_life.xml" />
     <AndroidResource Include="Resources\drawable\arrow_filled.png" />
+    <AndroidResource Include="Resources\drawable\LevelColoredCircle.png" />
+    <AndroidResource Include="Resources\drawable\LevelAmount.png" />
+    <AndroidResource Include="Resources\drawable\HeaderBg.png" />
+    <AndroidResource Include="Resources\drawable\dividerF.png" />
+    <AndroidResource Include="Resources\drawable\CheckMarkB.png" />
+    <AndroidResource Include="Resources\drawable\XMarkB.png" />
+    <AndroidResource Include="Resources\drawable\StatsIcon_Selected.png" />
+    <AndroidResource Include="Resources\layout\my_life_page.xml" />
+    <AndroidResource Include="Resources\layout\my_life_tile.xml" />
+    <AndroidResource Include="Resources\drawable\dateBgCircle.png" />
+    <AndroidResource Include="Resources\drawable\dateBgWide.png" />
+    <AndroidResource Include="Resources\drawable\test_tile_bg.png" />
+    <AndroidResource Include="Resources\layout\day_detail.xml" />
+    <AndroidResource Include="Resources\drawable\ChallengeButton.png" />
+    <AndroidResource Include="Resources\drawable\RemoveButton.png" />
+    <AndroidResource Include="Resources\anim\in_from_left.xml" />
+    <AndroidResource Include="Resources\anim\in_from_right.xml" />
+    <AndroidResource Include="Resources\anim\out_to_left.xml" />
+    <AndroidResource Include="Resources\anim\out_to_right.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
@@ -136,5 +151,32 @@
     <Folder Include="Resources\drawable\" />
     <Folder Include="Resources\layout\" />
     <Folder Include="Activities\" />
+    <Folder Include="Assets\fonts\" />
+    <Folder Include="Resources\anim\" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\fonts\segoeui.ttf" />
+    <AndroidAsset Include="Assets\fonts\segoeuib.ttf" />
+    <AndroidAsset Include="Assets\fonts\segoeuii.ttf" />
+    <AndroidAsset Include="Assets\fonts\segoeuil.ttf" />
+    <AndroidAsset Include="Assets\fonts\segoeuiz.ttf" />
+    <AndroidAsset Include="Assets\fonts\seguisb.ttf" />
+    <AndroidAsset Include="Assets\fonts\seguisym.ttf" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BLACK.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BLACKITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BOLD.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BOLDITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BOOK.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_BOOKITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_EXTRALIGHT.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_EXTRALIGHTITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_LIGHT.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_LIGHTITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_MEDIUM.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_MEDIUMITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_THIN.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_THINITALIC.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_ULTRA.TTF" />
+    <AndroidAsset Include="Assets\fonts\GOTHAM_ULTRAITALIC.TTF" />
   </ItemGroup>
 </Project>
