--- a/wave_android_uitest/wave_android_uitest.csproj
+++ b/wave_android_uitest/wave_android_uitest.csproj
@@ -144,6 +144,7 @@
     <AndroidResource Include="Resources\anim\in_from_right.xml" />
     <AndroidResource Include="Resources\anim\out_to_left.xml" />
     <AndroidResource Include="Resources\anim\out_to_right.xml" />
+    <AndroidResource Include="Resources\drawable\StatsButton.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
