--- a/wave_android_uitest/Properties/AndroidManifest.xml
+++ b/wave_android_uitest/Properties/AndroidManifest.xml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:waui="http://schemas.android.com/apk/Resources-auto" android:versionCode="1" android:versionName="1.0" package="wave_android_uitest.wave_android_uitest">
 	<uses-sdk android:minSdkVersion="14" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<application android:label="app"
 		uiOptions="splitActionBarWhenNarrow" />
 
